Actually fix colors and center-align table text

--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -1,8 +1,7 @@
-// I know this isn't really purple, I'm changing the color, okay?
-$purple-000: #edab54;
-$purple-100: #d09343;
-$purple-200: #b07427;
-$purple-300: #865619;
+// change links to orange because why not?
+a, .btn, .icon {
+  color: #ee8800!important
+}
 
 // change the tables so they are better for displaying recipes
 thead th {
@@ -16,6 +15,10 @@ table {
 
 .table-wrapper {
   width: max-content;
+}
+
+td {
+  text-align: center;
 }
 // make blockquotes more highlighted
 blockquote {
